--- a/TP5_correction/css/style.css
+++ b/TP5_correction/css/style.css
@@ -312,3 +312,518 @@ nav ul li{
     transform: translate(0, 20px);
 }
 
+/* *********************************** */
+
+hr{
+    clear: both;
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    margin-top: -5px;
+    z-index: -1;
+}
+
+.np{
+    /* background: maroon; */
+    width: 80%;
+    margin: auto;
+}
+
+.np-titre{
+    background: #f62775;
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+    position: relative;
+}
+
+.np-titre .triangle{
+    border-left: 0px solid transparent;
+    border-right: 25px solid transparent;
+    border-bottom: 55px solid #f62775;
+    position: absolute;
+    top: 0;
+    right: -25px;
+}
+
+.card{
+    width: 320px;
+    height: 350px;
+    background: #fff;
+    border: 1px solid #ddd;
+    color: #444;
+    float: left;
+    margin: 30px 0;
+}
+
+.card:hover, button{
+    cursor: pointer;
+}
+
+.card.st, .card.nd{
+    margin-right: 15%;
+}
+
+.card-img{
+    background: #000;
+    height: 60%;
+    position: relative;
+}
+
+.card i.fa.fa-search{
+    color: #f62775;
+}
+
+.card i.fas.fa.file-invoice{
+    color: #333;
+}
+
+/* ********************** IMAGES PRODUITS ********************** */
+
+.card.st .card-img.st{
+    background: url('../img/carrelage12.jpg');
+}
+
+.card.st .card-img.st{
+    background: url('../img/carrelage2.jpg');
+}
+
+.card.st .card-img.st{
+    background: url('../img/carrelage11.jpg');
+}
+
+.card.st .card-img.st{
+    background: url('../img/carrelage9.jpg');
+}
+
+.card.st .card-img.st{
+    background: url('../img/carrelage10.jpg');
+}
+
+.card.st .card-img.st{
+    background: url('../img/carrelage1.jpg');
+}
+
+/* ****************** IMAGES PRODUITS ***************** */
+
+.promo{
+    background: url('../img/promo.png');
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.promo2{
+    background: url('../img/livraison.png');
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.promo3{
+    background: url('../img/nouveauté.png');
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.card-title{
+    width: 100%;
+    padding-bottom: 30px;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.card-body{
+    position: relative;
+    height: 40%;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.card-price{
+    width: 100%;
+    text-align: center;
+    padding-bottom: 30px;
+    color: #f62775;
+}
+
+.card-link-left, .card-link-right{
+    display: block;
+    float: left;
+    background: #000;
+    width: 50%;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+}
+
+.card-link-left{
+    background: #2a2a2a;
+}
+
+.card-link-right{
+    background: #f62775;
+}
+
+.card-link-large{
+    clear: both;
+    display: block;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    background: rgb(184, 184, 184);
+    padding: 5px 0;
+}
+
+.option{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.espace{
+    padding: 10px;
+    clear: both;
+}
+
+/* ******************** ESHOP ********************** */
+
+.e-shop{
+    clear: both;
+    width: 80%;
+    margin: auto;
+    background: #616161;
+    color: #efefef;
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.e-title, .e-li-title{
+    font-weight: bold;
+    color: #fff;
+}
+
+.e-title{
+    background: #f62775;
+    display: inline-block;
+    padding: 10px 50px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+    position: absolute;
+    top: -17px;
+    left: 0;
+}
+
+.e-triangle{
+    border-top: 17px solid transparent;
+    border-left: 17px solid transparent;
+    border-right: 17px solid transparent;
+    border-bottom: 17px solid #f62775;
+    position: absolute;
+    top: 0;
+    right: -34px;
+    transform: rotate(90deg);
+}
+
+.e-shop ul{
+    float: left;
+    width: calc((100% / 3) -1px);
+    border-right: 1px solid #757575;
+    height: 385px;
+}
+
+.e-shop:first-of-type div{
+    margin-bottom: 50px;
+}
+
+.e-shop ul:nth-of-type(2) div, .e-shop ul:nth-of-type(3) div{
+    margin-bottom: 200px;
+}
+
+.e-shop ul li:first-of-type{
+    margin-top: 50px;
+}
+
+.e-li-little{
+    padding: 12px 0 10px;
+}
+
+.e-desc{
+    margin-bottom: 10px;
+}
+
+.e-desc-inter{
+    margin-bottom: 10px;
+    display: block;
+}   
+
+.address{
+    background: url('../img/sprites.png') no-repeat;
+    background-position-y: -101px;
+}
+
+.tel{
+    background: url('../img/sprites.png') no-repeat;
+    background-position-y: -100px;
+}
+
+.mail{
+    background: url('../img/sprites.png') no-repeat;
+    background-position-y: 2px;
+}
+
+.horaires{
+    background: url('../img/sprites.png') no-repeat;
+    background-position-y: -33px;
+}
+
+.sommes{
+    background: url('../img/sprites.png') no-repeat;
+    background-position-y: -68px;
+}
+
+.e-titre-bas-rose{
+    clear: both;
+    text-align: center;
+    color: #f62775;
+}
+
+/* ************************** FOOTER ************************ */
+
+footer{
+    clear: both;
+    background: #F5F5F5;
+    width: 100%;
+    color: #555;
+}
+
+footer ul{
+    float: left;
+    width: calc(calc(100% / 4) - 30px);
+    margin: 0 15px;
+}
+
+footer ul h5{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+    margin: 10px 0;
+}
+
+footer ul:last-of-type{
+    width: calc(75% - 20px);
+    float: left;
+    margin: 0 10px;
+}
+
+footer ul:last-of-type h5{
+    text-align: center;
+    text-transform: capitalize;
+}
+
+footer ul:last-of-type p{
+    text-transform: capitalize;
+    line-height: 25px;
+    font-size: 14px;
+}
+
+footer ul li{
+    margin-bottom: 5px;
+}
+
+footer ul:nth-of-type(2) li{
+    transform: translate(25%);
+}
+
+footer ul:nth-of-type(3) li{
+    text-align: center;
+}
+
+footer ul:nth-of-type(4) li{
+    float: right;
+}
+
+footer ul:nth-of-type(5) li{
+    margin-bottom: 20px;
+}
+
+footer a{
+    color: #555;
+}
+
+.f-ul-container{
+    width: 80%;
+    padding: 30px;
+    margin: auto;
+}
+
+.f-map{
+    background: blue;
+    background-image: url('../img/map.png');
+    width: 58px;
+    height: 58px;
+    float: left;
+    margin-top: 10px;
+}
+
+.f-gris{
+    border: none;
+    text-align-last: left;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 5px;
+    color: #555;
+    margin-top: 10px;
+}
+
+.f-desc{
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.f-desc em{
+    font-style: italic;
+}
+
+.f-text{
+    float: left;
+    width: calc(100% - 68px);
+    margin-left: 10px;
+}
+
+.f-low{
+    border: none;
+}
+
+.f-sous-titre{
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.f-envoyer, .f-newsletter{
+    background: #eae7e7;
+    color: #342333;
+    text-align: center;
+    padding: 15px;
+    clear: both;
+}
+
+.f-envoyer em, .f-newsletter{
+    font-style: italic;
+    font-size: 14px;
+    display: block;
+    margin: 10px 0;
+    width: 100%;
+}
+
+.f-envoyer label, .f-newsletter label{
+    font-style: italic;
+    text-align-last: left;
+    font-size: 12px;
+    display: block;
+    margin: 50px 0;
+    width: 100%;
+}
+
+footer form input, footer form button{
+    border: none;
+    padding: 10px 0;
+}
+
+footer form button{
+    font-style: italic;
+    border-radius: 0 3px 3px 0;
+    border: none;
+    background: linear-gradient(#909090, #757575);
+    color: #fff;
+    font-weight: bold;
+}
+
+::placeholder{
+    font-style: italic;
+}
+
+footer form input{
+    padding: 3px 10px;
+    border: none;
+    border-top: 2px solid #ccc;
+    border-left: 2px solid #ccc;
+    border-bottom: 2px solid #ccc;
+    border-radius: 1px 0 0 1px;
+    color: #888;
+}
+
+.f-newsletter input{
+    width: calc(60% - 2px);
+    float: left;
+    padding: 10px 10px;
+}
+
+.f-newsletter button{
+    width: calc(40% - 2px);
+    float: left;
+}
+
+.f-envoyer input{
+    width: calc(100% - 20px);
+    padding: 10px 10px;
+    border-radius: 3px;
+}
+
+.f-social{
+    text-align: center;
+    color: #222;
+    margin: 20px 0;
+    font-size: 20px;
+}
+
+.f-social i{
+    margin: 0 2.5px;
+}
+
+.f-facebook{
+    background: #eae7e7;
+}
+
+.f-facebook div{
+    padding: 5px;
+}
+
+.f-separator img{
+    position: relative;
+    z-index: 2;
+}
+
+.f-separator div{
+    border-top: 1px solid #efefef;
+    position: absolute;
+    width: 90%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    bottom: 14px;
+    z-index: 1;
+}
+
+.f-cc, .f-em-fin{
+    padding: 20px 0;
+    margin: 0 5%;
+}
+
+.f-cc{
+    float: left;
+}
+
+.f-em-fin{
+    float: right;
+    font-style: italic;
+    font-size: 14px;
+}
